src/index.scss
@import '../src/Components/Header/_Header.scss';
@import '../src/Components/Faq/_Faq.scss';
@import '../src/Components/App/_App.scss';
@import '../src/Components/Error/_Error.scss';
@import '../src/Components/LocationData/_LocationData.scss';
@import '../src/Components/Selector/_Selector.scss';

body {
  margin: 0;
  padding: 0;
  background-color: #2D68AB;
  font-family: 'Open Sans', sans-serif;
}

#blockColorblindContent {
  display: none;
}


// Mobile View
@media only screen and (max-width: 425px) {
  .App {
    text-align: center;
  }

  .Collapsible__contentInner {
    text-align: center;
  }

  .empty-space {
    color: #CCE1E3;
    margin-top: 45%;
  }

  .faq {
    padding: 5%;
  }

  .form {
    display: flex;
    flex-direction: column;
  }

  .locationData {
    display: flex;
    flex-direction: column;
  }

  .paragraphs {
    margin: 3%;
  }

  .titles {
    margin: 5%;
  }

  .weather-icon {
    height: 20vh;
    width: 50vw;
    margin: 0;
  }

  .wrapper {
    display: flex;
    flex-direction: column;
    margin: 0;
  }
}

